fix z-index of UI tooltip

--- a/ui/operator_ui/static/styles.css
+++ b/ui/operator_ui/static/styles.css
@@ -66,11 +66,12 @@ td {
 }
 
 .tooltip {
-  position: inherit;
+  position: relative;
   display: inline-block;
   opacity: 1;
   font-size: 14px;
   font-weight: bold;
+  z-index: 0;
 }
 .tooltip:after {
   content: '?';
@@ -97,7 +98,6 @@ td {
   border-radius: 6px;
   padding: 10px 10px;
   position: absolute;
-  z-index: 1;
   bottom: 150%;
   left: 50%;
   margin-left: -120px;
